Fixing error recovery when j.l.MatchException is missing, and patterns are present.